# drf-auth

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
ElementeryParticles/: asgi.py  settings.py  urls.py  wsgi.py
particles/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
