[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["Jana Abdelkader <janaosama1300@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
